syntax = "proto3";

option go_package = "ddbstream";
option java_multiple_files = true;
option java_package = "com.example.ddbstream";
option java_outer_classname = "DdbStream";

package ddbstream;

service DdbStream {
  rpc Subscribe (SubscribeRequest) returns (stream SubscribeResponse) {}
}

message SubscribeRequest {
}

message SubscribeResponse {
  string type = 1;
  string data = 2;
}
